--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,9 @@ dependencies {
     implementation "android.arch.lifecycle:extensions:$rootProject.archLifecycleVersion"
     annotationProcessor "android.arch.lifecycle:compiler:$rootProject.archLifecycleVersion"
 
+
+    //RecyclerView
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    //CardView
+    implementation 'com.android.support:cardview-v7:26.1.0'
 }
