--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     //CardView
     implementation 'com.android.support:cardview-v7:26.1.0'
+
+    //Picasso (Image loading)
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
