--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,7 @@ dependencies {
 
     //Picasso (Image loading)
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+    //Round image
+    implementation 'com.github.siyamed:android-shape-imageview:0.9.+@aar'
 }
